corrected HTML and CSS errors, improved best practices, code readability, accessibility.

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,22 @@
+:root{
+    --white: rgb(255, 255, 255);
+    --brand-color: rgb(255, 164, 8);
+    --light-gray: rgb(197, 197, 197);
+    --dark-gray: rgb(165, 165, 165);
+    --border-color: rgb(225, 164, 73);
+    --background-color: rgb(208, 208, 208);
+    --hover-background: rgb(216, 200, 141);
+    --submit-background: rgb(188, 97, 0);
+    --black: rgb(0, 0, 0);
+}
+
 *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     font-family: sans-serif, Arial, Helvetica;
-    color: rgb(255, 255, 255);
+    color: var(--white);
 }
-
 
 body{
     /* background-color:  rgb(45, 45, 45); */
@@ -19,11 +30,10 @@ body{
 
 #title{
     margin: 20px 5px 15px 20px;
- 
 }
 
 .brand-color{
-    color: rgb(255, 164, 8);
+    color: var(--brand-color);
     font-family:  cursive,sans-serif;
     font-size: 45px
 }
@@ -34,15 +44,13 @@ body{
     font-weight: bold;
     display: block;
     padding: 5px;
-    margin-left: 15px;
-    color: rgb(255, 255, 255);
+    color: var(--white);
     justify-content: center;
     text-align: center;
-
 }
 
 .wrapper{
-    border: 2px solid rgb(225, 164, 73);
+    border: 2px solid var(--border-color);
     width: 360px;
     height: auto;
     margin: 20px auto 20px auto;
@@ -55,6 +63,7 @@ body{
 form{
     display: flex;
     flex-direction: column;
+    padding: 8px;
 }
 
 #name-label{
@@ -69,19 +78,18 @@ form{
     border-radius: 50px;
     margin-bottom: 18px;
     margin-top: 5px;
-    border: 2px solid rgb(225, 164, 73);
+    border: 2px solid var(--border-color);
     font-weight: bold;
-    color: black;
+    color: var(--black);
 }
 
 #name:hover{
-    background-color: rgb(197, 197, 197);
+    background-color: var(--light-gray);
 }
 
 #email-label{
     font-size: 1.2rem;
     font-weight: bold;
-
 }
 
 #email{
@@ -91,23 +99,21 @@ form{
     border-radius: 50px;
     margin-bottom: 18px;
     margin-top: 5px;
-    border: 2px solid rgb(225, 164, 73);
+    border: 2px solid var(--border-color);
     font-weight: bold;
-    color: black;
-    
+    color: var(--black);
 }
 
 #email:hover{
-    background-color: rgb(197, 197, 197);
+    background-color: var(--light-gray);
 }
 
 #number-label{
     font-size: 1.2rem;
     font-weight: bold;
-
 }
 #number-label span{
-    color: rgb(165, 165, 165);
+    color: var(--dark-gray);
     font-weight: bold;
 }
 
@@ -118,18 +124,17 @@ form{
     border-radius: 50px;
     margin-bottom: 25px;
     margin-top: 5px;
-    border: 2px solid rgb(225, 164, 73);
+    border: 2px solid var(--border-color);
     font-weight: bold;
-    color: black;
-    
+    color: var(--black);
 }
 
 #number:hover{
-    background-color: rgb(197, 197, 197);
+    background-color: var(--light-gray);
 }
 
 #dropdown-label{
-    font-size: 1.2rem;
+    font-size: 1.4rem;
 }
 
 #dropdown{
@@ -139,77 +144,57 @@ form{
     border-radius: 50px;
     margin-bottom: 25px;
     margin-top: 5px;
-    border: 2px solid rgb(225, 164, 73);
+    border: 2px solid var(--border-color);
     font-weight: bold;
-    color: white;
-    background-color: black;
+    color: var(--white);
+    background-color: var(--black);
 }
 
-#radio{
-    width: 100%;
-    height: 200px;
-    font-size: 1.1rem;
-    
-}
-
-
-
-.radio-1{
-    height: 20px;
-    width: 20px;
-    margin-bottom: 15px;
-    margin-top: 15px;
-}
-
-.radio-2{
-    height: 20px;
-    width: 20px;
-    margin-bottom: 15px;
-    
-}
-
-.radio-3{
-    height: 20px;
-    width: 20px;
-    margin-bottom: 15px;
-}
-
-.radio-4{
-    height: 20px;
-    width: 20px;
-    margin-bottom: 15px;
-}
-
-
-#checkboxs{
+#radio-buttons{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
     font-size: 1.2rem;
-    height: 450px;
 }
 
-#checkboxs span{
-    color: rgb(225, 164, 73);
-    font-weight: bold;
-
+#radio-buttons label{
+    position: relative;
+    top: -4px;
 }
 
-#checkboxs input{
+.label-radio-section{
+    font-size: 1.4rem;
+    margin-bottom: 10px;
+}
+
+.radio-btn{
+    margin-right: 10px;
+    margin-bottom: 10px;
     height: 20px;
     width: 20px;
-    margin-bottom: 13px;
-    margin-right: 15px;
-
 }
 
-#checkboxs p{
-    margin-bottom: 15px;
+#label-check-boxs{
+    font-size: 1.4rem;
+    margin-bottom: 10px;
+}
+
+.checkbox{
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    position: relative;
+    top: 3px;
+}
+
+#last-checkbox-btn{
+    margin-bottom: 20px;
 }
 
 #comments{
-    font-size: 1.2rem;
-}
-
-#comments p{
-    margin-bottom: 15px;
+    font-size: 1.4rem;
+    margin-bottom: 20px;
 }
 
 textarea{
@@ -218,43 +203,47 @@ textarea{
     margin-left: 15px;
     padding: 25px;
     border-radius: 30px;
-    color: black;
+    color: var(--black);
     font-size: 1.3rem;
-    border: 3px solid rgb(225, 164, 73);
-    background-color: rgb(208, 208, 208);
+    border: 3px solid var(--border-color);
+    background-color: var(--background-color);
     margin-bottom: 15px;
     transition: .3s ease-in-out;
 }
 
 textarea:hover{
-    background-color: rgb(216, 200, 141);
+    background-color: var(--hover-background);
 }
 
 #submit{
     width: 100%;
     height: 40px;
     border-radius: 30px;
-    background-color: rgb(225, 164, 73);
-    color: black;
+    background-color: var(--border-color);
+    color: var(--black);
     font-weight: bold;
     font-size: 1.3rem;
-    border: 3px solid rgb(0, 0, 0);
+    border: 3px solid var(--black);
     margin-bottom: 10px;
     transition: .3s ease-in-out;
 }
 
 #submit:hover{
-    background-color: rgb(124, 255, 115);
+    background-color: var(--submit-background);
 }
 
 @media (min-width:500px ){
+
+    form{
+        padding: 2px;
+    }
 
     #title{
         margin: 20px 20% 15px 20%;
     }
 
     .wrapper{
-        border: 2px solid rgb(225, 164, 73);
+        border: 2px solid var(--border-color);
         width: 480px;
         height: auto;
         margin: 20px auto 20px auto;
@@ -265,14 +254,13 @@ textarea:hover{
     }
 }
 
-
 @media (min-width:700px){
 
     #title{
         margin: 20px 20% 15px 20%;
     }
     .wrapper{
-        border: 2px solid rgb(225, 164, 73);
+        border: 2px solid var(--border-color);
         width: 700px;
         height: auto;
         margin: 20px auto 20px auto;
